applications/mediamtx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediamtx
  namespace: mediamtx
  labels:
    app: mediamtx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediamtx
  template:
    metadata:
      labels:
        app: mediamtx
    spec:
      containers:
        - name: mediamtx
          image: bluenviron/mediamtx:1.12.2
          ports:
            - containerPort: 1936
            - containerPort: 8888
          volumeMounts:
            - name: tls
              mountPath: /server.key
              subPath: tls.key
            - name: tls
              mountPath: /server.crt
              subPath: tls.crt
      volumes:
        - name: tls
          secret:
            secretName: mediamtx-tls
