applications/mediamtx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamtx
  namespace: mediamtx
  labels:
    app: mediamtx
spec:
  selector:
    app: mediamtx
  type: LoadBalancer
  ports:
    - name: rtmp
      port: 1935
      targetPort: 1935
      protocol: TCP
    - name: hls
      port: 8888
      targetPort: 8888
      protocol: TCP
