applications/mediamtx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediamtx-ingress
  namespace: mediamtx
  labels:
    app: mediamtx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP

spec:
  ingressClassName: nginx
  rules:
    - host: live.koyashiro.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediamtx-hls
                port:
                  number: 8888
  tls:
    - hosts:
        - live.koyashiro.net
      secretName: mediamtx-tls
